# pc-wizard

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  deny.toml  pc-wizard-onefile.spec  pc-wizard.spec  pyproject.toml  rust-toolchain.toml
.agents/skills/add-srd-content/: SKILL.md
.agents/skills/add-srd-content/agents/: openai.yaml
.agents/skills/add-srd-content/references/: content-map.md
.agents/skills/maintain-pdf-mapping/: SKILL.md
.agents/skills/maintain-pdf-mapping/agents/: openai.yaml
.agents/skills/maintain-pdf-mapping/references/: acroform.md
.agents/skills/release-pc-wizard/: SKILL.md
.agents/skills/release-pc-wizard/agents/: openai.yaml
.agents/skills/verify-pc-wizard/: SKILL.md
.agents/skills/verify-pc-wizard/agents/: openai.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependency-audit.yml  native-binaries.yml  quality.yml
benchmarks/: python-linux-x86_64-v0.2.1.json  rust-linux-x86_64-v0.3.0.json
contracts/: README.md  character-json-v1.md  cli-v1.md
contracts/fixtures/: class-parity-v1.json  complete-rogue-v1.json  derived-rogue-v1.json  draft-origin-v1.json  invalid-unknown-field-v1.json  origin-parity-v1.json  pdf-projection-full-v1.json  pdf-rogue-v1.json  rendered-page-v1.json  template-catalog-v1.json  template-fields-v1.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  template.rs
crates/cli/tests/: cli.rs  interactive.rs  native_cli.rs
crates/creation/: Cargo.toml
crates/creation/src/: error.rs  lib.rs  prompts.rs  workflow.rs
crates/domain/: Cargo.toml
crates/domain/src/: derived.rs  ids.rs  lib.rs  model.rs  record.rs  sheet.rs  validation.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: pdf_proof.rs  workspace.rs
crates/pdf-renderer/: Cargo.toml
crates/pdf-renderer/src/: appearance.rs  field_writer.rs  lib.rs  projection.rs  renderer.rs  template_inventory.rs
crates/srd-data/: Cargo.toml
crates/srd-data/data/: spells.json
crates/srd-data/src/: catalog.rs  classes.rs  core.rs  equipment.rs  lib.rs  species.rs  spells.rs  types.rs
docs/: codex.md  releasing.md  roadmap.md  rust-migration.md
scripts/: benchmark_cli.ps1  benchmark_cli.py  contract_test.py  export_class_parity_contract.py  export_origin_parity_contract.py  export_pdf_projection_contract.py  export_srd_spell_contract.py  package_binary.py  smoke_binary.py
src/pc_wizard/: THIRD_PARTY_NOTICES.md  __init__.py  __main__.py  cli.py  models.py  pdf.py  rules.py  wizard.py
tests/: test_cli.py  test_contracts.py  test_models.py  test_package_binary.py  test_pdf.py  test_pdf_projection_contract.py  test_properties.py  test_wizard.py
tests/fixtures/: character.json
