[workspace]
members = [
  "crates/srd-data",
  "crates/domain",
  "crates/creation",
  "crates/pdf-renderer",
  "crates/cli",
  "crates/integration-tests",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/volnuttz/pc-wizard"
homepage = "https://github.com/volnuttz/pc-wizard"
authors = ["Cuauhtemoc Contreras <89711776+volnuttz@users.noreply.github.com>"]

[workspace.dependencies]
lopdf = { version = "0.43.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
rand = "0.10.2"
clap = { version = "4.6.2", features = ["derive"] }
inquire = "0.9.4"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
