[project]
name = "pc-wizard"
version = "0.1.0"
description = "An interactive D&D 5.5e character creation wizard"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic>=2.11,<3",
  "pypdf>=5.7,<7",
  "questionary>=2.1,<3",
  "rich>=14,<15",
  "typer>=0.16,<1",
]

[project.scripts]
pc-wizard = "pc_wizard.cli:app"

[dependency-groups]
dev = [
  "pyright>=1.1.402",
  "pytest>=8.4",
  "pytest-cov>=6.2",
  "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pc_wizard"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
