[project]
name = "pc-wizard"
version = "0.2.0"
description = "An interactive D&D 5.5e character creation wizard"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Cuauhtemoc Contreras", email = "89711776+volnuttz@users.noreply.github.com" },
]
keywords = ["character-builder", "cli", "dnd", "srd", "tabletop-rpg"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = [
  "pydantic>=2.11,<3",
  "pypdf>=5.7,<7",
  "questionary>=2.1,<3",
  "rich>=15.0.0,<16",
  "typer>=0.27.0,<1",
]

[project.scripts]
pc-wizard = "pc_wizard.cli:app"

[project.urls]
Documentation = "https://github.com/volnuttz/pc-wizard#readme"
Issues = "https://github.com/volnuttz/pc-wizard/issues"
Repository = "https://github.com/volnuttz/pc-wizard"

[dependency-groups]
dev = [
  "pyinstaller>=6.21,<7",
  "pypdfium2>=5.12.0,<6",
  "pyright>=1.1.402",
  "pytest>=8.4",
  "pytest-cov>=6.2",
  # Hypothesis generates broad score combinations that example-based tests miss.
  "hypothesis>=6.140,<7",
  # pip-audit supplies the reproducible dependency vulnerability check in CI.
  "pip-audit>=2.10,<3",
  "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pc_wizard"]

[tool.hatch.build.targets.sdist]
include = [
  "/.agents/skills",
  "/.github/workflows",
  "/AGENTS.md",
  "/CODE_OF_CONDUCT.md",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/README.md",
  "/docs",
  "/pyproject.toml",
  "/scripts",
  "/src",
  "/tests",
  "/uv.lock",
  "/*.spec",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests", "scripts"]
venvPath = "."
venv = ".venv"
