[package]
name = "pc-wizard-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
pc-wizard-creation = { path = "../creation" }
pc-wizard-domain = { path = "../domain" }
pc-wizard-pdf-renderer = { path = "../pdf-renderer" }

