[package]
name = "pc-wizard-creation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Interactive creation workflow for pc-wizard"

[lints]
workspace = true

[dependencies]
pc-wizard-domain = { path = "../domain" }
pc-wizard-srd-data = { path = "../srd-data" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
inquire.workspace = true
