[package]
name = "pc-wizard-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Canonical character domain model and derived rules for pc-wizard"

[lints]
workspace = true

[dependencies]
pc-wizard-srd-data = { path = "../srd-data" }
serde.workspace = true
serde_json.workspace = true
