[package]
name = "pc-wizard-pdf-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Official character-sheet AcroForm renderer for pc-wizard"

[lints]
workspace = true

[dependencies]
pc-wizard-domain = { path = "../domain" }
lopdf.workspace = true
sha2.workspace = true
