[package]
name = "pc-wizard-srd-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "SRD 5.2.1 level-1 data for pc-wizard"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
